--- a/css/main.css
+++ b/css/main.css
@@ -382,7 +382,7 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  font-family: "Arial", sans-serif;
+  font-family: "Raleway", "Arial", sans-serif;
   font-size: 16px;
   line-height: 1.5;
 }
