fixed intro-link and site-header-bg

--- a/css/main.css
+++ b/css/main.css
@@ -427,9 +427,11 @@ img {
 
 .site-header {
   position: fixed;
+  z-index: 50;
   top: 0;
   left: 0;
   width: 100%;
+  background-color: #1B2330;
 }
 
 .site-logo {
