--- a/scss/blocks/_about-item.scss
+++ b/scss/blocks/_about-item.scss
@@ -12,6 +12,10 @@
     margin-right: auto;
     margin-bottom: 16px;
   }
+
+  &:first-child {
+    margin-bottom: 78px;
+  }
 }
 
 .about-item--access {
@@ -31,6 +35,7 @@
 
 .about-item__text {
   font-size: 14px;
+  margin: 0;
 }
 
 .about-item--security {
