complate about section with responsive

--- a/css/main.css
+++ b/css/main.css
@@ -700,4 +700,33 @@ img {
 .about-item--store::before {
   background-image: url("../img/story.svg");
 }
+
+@media only screen and (max-width: 790px) {
+  .about-item {
+    max-width: 330px;
+  }
+}
+
+@media only screen and (max-width: 720px) {
+  .about-item {
+    max-width: 290px;
+  }
+}
+
+@media only screen and (max-width: 620px) {
+  .about-item {
+    max-width: 250px;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .about-item {
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 80px;
+  }
+  .about-item:last-child {
+    margin-bottom: 0;
+  }
+}
 /*# sourceMappingURL=main.css.map */
