--- a/scss/blocks/_about-item.scss
+++ b/scss/blocks/_about-item.scss
@@ -61,3 +61,37 @@
     background-image: url("../img/story.svg");
   }
 }
+
+@media only screen and (max-width: 790px) {
+
+  .about-item {
+    max-width: 330px;
+  }
+}
+
+@media only screen and (max-width: 720px) {
+
+  .about-item {
+    max-width: 290px;
+  }
+}
+
+@media only screen and (max-width: 620px) {
+
+  .about-item {
+    max-width: 250px;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+
+  .about-item {
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 80px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
