--- a/scss/blocks/_intro.scss
+++ b/scss/blocks/_intro.scss
@@ -49,3 +49,39 @@
   border-radius: 28px;
   align-items: center;
 }
+
+@media only screen and (max-width: 768px) {
+
+  .intro__title {
+    font-size: 32px;
+    line-height: 48px;
+  }
+
+  .intro__text {
+    font-size: 17px;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+
+  .intro__title {
+    font-size: 24px;
+    line-height: 36px;
+  }
+
+  .intro__text {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width: 325px) {
+
+  .intro__title {
+    font-size: 21px;
+    line-height: 32px;
+  }
+
+  .intro__text {
+    font-size: 13px;
+  }
+}
