--- a/css/main.css
+++ b/css/main.css
@@ -549,6 +549,16 @@ img {
   background-position: center top 650px;
 }
 
+@media only screen and (max-width: 450px) {
+  .main {
+    background-image: 0;
+    background-image: url("../img/mobi-main-bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center top 480px;
+  }
+}
+
 .intro__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -620,6 +630,10 @@ img {
   .intro__text {
     font-size: 17px;
   }
+  .intro__link {
+    font-size: 15px;
+    padding: 16px 87px 15px 87px;
+  }
 }
 
 @media only screen and (max-width: 450px) {
@@ -629,6 +643,10 @@ img {
   }
   .intro__text {
     font-size: 14px;
+  }
+  .intro__link {
+    font-size: 14px;
+    padding: 16px 81px;
   }
 }
 
