--- a/scss/blocks/_main.scss
+++ b/scss/blocks/_main.scss
@@ -4,3 +4,14 @@
   background-size: cover;
   background-position: center top 650px;
 }
+
+@media only screen and (max-width: 450px) {
+
+  .main {
+    background-image: 0;
+    background-image: url("../img/mobi-main-bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center top 480px;
+  }
+}
