--- a/scss/blocks/_intro.scss
+++ b/scss/blocks/_intro.scss
@@ -48,6 +48,14 @@
   box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.15925);
   border-radius: 28px;
   align-items: center;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
 }
 
 @media only screen and (max-width: 768px) {
