--- a/css/main.css
+++ b/css/main.css
@@ -803,6 +803,7 @@ img {
   -o-object-fit: cover;
      object-fit: cover;
   margin-right: 57px;
+  max-width: 50%;
 }
 
 .demo__right {
@@ -844,5 +845,43 @@ img {
   background-position: center center;
   background-size: contain;
   margin-left: 8px;
+}
+
+@media only screen and (max-width: 805px) {
+  .demo__title {
+    font-size: 36px;
+    text-align: center;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .demo__title {
+    font-size: 30px;
+  }
+  .demo__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .demo__img {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+    margin-bottom: 48px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .demo__title {
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .demo__text {
+    font-size: 14px;
+  }
+  .demo__link {
+    font-size: 12px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
