--- a/scss/blocks/_blockquote.scss
+++ b/scss/blocks/_blockquote.scss
@@ -5,7 +5,6 @@
 .blockquote__list {
   @include reset-list;
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
   position: relative;
   z-index: 6;
@@ -35,6 +34,11 @@
   box-shadow: 5px 5px 8px rgba(56, 56, 56, 0.0991282);
   border-radius: 3.93258px;
   z-index: 5;
+  margin-right: 25px;
+
+    &:last-child {
+      margin-right: 0;
+  }
 }
 
 .blockquote__blockquote-text {
@@ -83,4 +87,87 @@
 
 .blockquote__user-info--iva::before {
   background-image: url("../img/iva.svg");
+}
+
+@media only screen and (max-width: 827px) {
+
+  .blockquote__list {
+    flex-wrap: wrap;
+    justify-content: center;
+
+    &::before {
+      top: -14%;
+    }
+  }
+
+  .blockquote__item {
+    margin-bottom: 24px;
+  }
+}
+
+@media only screen and (max-width: 799px) {
+
+  .blockquote__list::before {
+    left: 24%;
+  }
+}
+
+@media only screen and (max-width: 774px) {
+
+  .blockquote__item {
+    max-width: 460px;
+    margin-right: 0;
+    margin-left: 0;
+
+     &:last-child {
+      margin-right: 0px;
+     }
+  }
+
+  .blockquote__list::before {
+    left: 18%;
+    top: -10%;
+  }
+}
+
+@media only screen and (max-width: 774px) {
+
+  .blockquote__list::before {
+    left: 17%;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+
+  .blockquote__list::before {
+    left: 14%;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+
+  .blockquote__list::before {
+    left: 10%;
+  }
+}
+
+@media only screen and (max-width: 530px) {
+
+  .blockquote__list::before {
+    left: 7%;
+  }
+}
+
+@media only screen and (max-width: 444px) {
+
+  .blockquote__list::before {
+    top: -9%;
+  }
+}
+
+@media only screen and (max-width: 333px) {
+
+  .blockquote__list::before {
+    top: -8%;
+  }
 }
