complate contact section with responsive

--- a/scss/blocks/_blockquote.scss
+++ b/scss/blocks/_blockquote.scss
@@ -163,6 +163,10 @@
   .blockquote__list::before {
     top: -9%;
   }
+
+  .blockquote {
+    margin-bottom: 160px;
+  }
 }
 
 @media only screen and (max-width: 333px) {
