--- a/css/main.css
+++ b/css/main.css
@@ -1052,6 +1052,9 @@ img {
   .blockquote__list::before {
     top: -9%;
   }
+  .blockquote {
+    margin-bottom: 160px;
+  }
 }
 
 @media only screen and (max-width: 333px) {
@@ -1098,6 +1101,30 @@ img {
   margin-right: auto;
 }
 
+@media only screen and (max-width: 768px) {
+  .contact__wrapper {
+    padding: 40px 28px;
+  }
+  .contact__title {
+    font-size: 24px;
+    line-height: 32px;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .contact__wrapper {
+    padding: 40px 28px;
+  }
+  .contact__title {
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .contact__text {
+    font-size: 12px;
+    line-height: 21px;
+  }
+}
+
 .contact-form {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1140,5 +1167,23 @@ img {
   background-image: linear-gradient(152.13deg, #63E1D9 -150.21%, #34A0CD 170.03%);
   border-radius: 24px;
   border: 0;
+}
+
+@media only screen and (max-width: 768px) {
+  .contact-form {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contact-form__input {
+    margin-right: 0;
+    margin-bottom: 24px;
+  }
+  .contact-form__button {
+    width: 100%;
+    max-width: 100%;
+    text-align: center;
+  }
 }
 /*# sourceMappingURL=main.css.map */
