--- a/scss/blocks/_contact-form.scss
+++ b/scss/blocks/_contact-form.scss
@@ -36,3 +36,21 @@
   border-radius: 24px;
   border: 0;
 }
+
+@media only screen and (max-width: 768px) {
+
+  .contact-form {
+    flex-direction: column;
+  }
+
+  .contact-form__input {
+    margin-right: 0;
+    margin-bottom: 24px;
+  }
+
+  .contact-form__button {
+    width: 100%;
+    max-width: 100%;
+    text-align: center;
+  }
+}
