--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -3,7 +3,6 @@
   padding-top: 200px;
   padding-bottom: 100px;
   color: #fff;
-  height: 456px;
 }
 
 .footer__logo {
@@ -13,6 +12,7 @@
 
 .footer__bottom {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .footer__address {
@@ -100,7 +100,7 @@
   margin-bottom: 16px;
 
   &:last-child {
-    mix-blend-mode: 0;
+    margin-bottom: 0;
   }
 }
 
@@ -117,6 +117,7 @@
 
 .footer__facebook-link {
   margin-right: 11px;
+  margin-left: 15px;
 }
 
 .footer__facebook-logo {
@@ -133,4 +134,100 @@
 
 .footer__instagram-logo {
   display: block;
+}
+
+@media only screen and (max-width: 1178px) {
+  .footer__social-links {
+    margin-left: 0;
+  }
+}
+
+@media only screen and (max-width: 1134px) {
+
+  .footer__logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .footer__bottom {
+    justify-content: center;
+  }
+
+  .footer__address {
+    margin-bottom: 80px;
+  }
+
+  .footer__social-links {
+    margin-left: 50px;
+  }
+}
+
+@media only screen and (max-width: 803px) {
+
+  .footer__phone {
+    margin-right: 40px;
+  }
+}
+
+@media only screen and (max-width: 698px) {
+
+  .footer__social-links {
+    margin-top: 30px;
+    margin-left: 70px;
+    margin-right: 70px;
+  }
+}
+
+@media only screen and (max-width: 489px) {
+
+  .site-footer {
+    padding-top: 273px;
+    padding-bottom: 46px;
+  }
+
+  .footer__logo {
+    margin-left: 0;
+    padding: 0 40px;
+  }
+
+  .footer__bottom {
+    justify-content: flex-start;
+    padding: 0 30px;
+  }
+
+  .footer__address {
+    margin: 0;
+    margin-bottom: 16px;
+  }
+
+  .footer__phone {
+    display: block;
+    margin-bottom: 80px;
+  }
+
+  .footer__nav {
+    flex-direction: column;
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .footer__sitenav {
+
+    &:first-child {
+    margin-bottom: 48px;
+    }
+
+    &:last-child {
+      margin-bottom: 80px;
+    }
+  }
+
+  .footer__social-links {
+    margin: 0;
+    width: 100%;
+    max-width: 100%;
+    justify-content: center;
+  }
+
 }
