--- a/scss/blocks/_contact-form.scss
+++ b/scss/blocks/_contact-form.scss
@@ -35,6 +35,14 @@
   background-image: linear-gradient(152.13deg, #63E1D9 -150.21%, #34A0CD 170.03%);
   border-radius: 24px;
   border: 0;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -46,11 +54,15 @@
   .contact-form__input {
     margin-right: 0;
     margin-bottom: 24px;
+    padding-top: 15px;
+    padding-bottom: 14px;
   }
 
   .contact-form__button {
     width: 100%;
     max-width: 100%;
     text-align: center;
+    font-size: 13px;
+    padding: 13px 24px;
   }
 }
