--- a/scss/blocks/_demo.scss
+++ b/scss/blocks/_demo.scss
@@ -49,6 +49,14 @@
     background-size: contain;
     margin-left: 8px;
   }
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
 }
 
 @media only screen and (max-width: 805px) {
